# ChangeLog for www-client/urlgfe
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/urlgfe/ChangeLog,v 1.18 2007/03/09 20:02:59 nixnut Exp $

  09 Mar 2007; nixnut <nixnut@gentoo.org> urlgfe-1.0.ebuild:
  Stable on ppc wrt bug 169533

  05 Mar 2007; Raúl Porcel <armin76@gentoo.org> urlgfe-1.0.ebuild:
  x86 stable wrt bug 169533

*urlgfe-1.0.1 (04 Mar 2007)

  04 Mar 2007; Sven Wegener <swegener@gentoo.org> +urlgfe-1.0.1.ebuild:
  Version bump.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  28 Oct 2006; Sven Wegener <swegener@gentoo.org>
  -files/1.0-as-needed.patch, urlgfe-1.0.ebuild:
  Remove the --as-needed patch, too much hassle for now.

  04 Oct 2006; Simon Stelling <blubb@gentoo.org> urlgfe-1.0.ebuild:
  reverting to ~amd64 as there are still critical bugs

  03 Oct 2006; Simon Stelling <blubb@gentoo.org> urlgfe-1.0.ebuild:
  stable on amd64

  10 Sep 2006; Sven Wegener <swegener@gentoo.org> ChangeLog:
  Add autopoint call to fix bug #146151.

  02 Aug 2006; Sven Wegener <swegener@gentoo.org>
  +files/1.0-as-needed.patch, urlgfe-1.0.ebuild:
  Add better configure handling, with --as-needed fix.

*urlgfe-1.0 (10 Jul 2006)

  10 Jul 2006; Sven Wegener <swegener@gentoo.org> -urlgfe-1.0_rc2.ebuild,
  +urlgfe-1.0.ebuild:
  Version bump.

*urlgfe-1.0_rc2 (23 May 2006)

  23 May 2006; Sven Wegener <swegener@gentoo.org> -urlgfe-1.0_rc1.ebuild,
  +urlgfe-1.0_rc2.ebuild:
  Version bump.

*urlgfe-1.0_rc1 (02 Mar 2006)

  02 Mar 2006; Sven Wegener <swegener@gentoo.org> +urlgfe-1.0_rc1.ebuild:
  Version bump.

  04 Feb 2006; Joshua Nichols <nichoj@gentoo.org> urlgfe-0.98b.ebuild:
  Added ~amd64 keyword.

*urlgfe-0.98b (09 Sep 2005)

  09 Sep 2005; Sven Wegener <swegener@gentoo.org> +urlgfe-0.98b.ebuild:
  Version bump.

  29 Aug 2005; Sven Wegener <swegener@gentoo.org> urlgfe-0.98a.ebuild:
  Stable on x86.
