@@ -1,15 +1,8 @@
-DIST urlgfe-0.98a.tar.gz 573545 RMD160 e4fd399e32784ef21e615731b51298d641b684af SHA1 e300dba0818aedd34caaf304b61a4c3de01a6feb SHA256 a80a1effb29b72a97e8e330eb67652db9bd9c55b9f9f1c51e7666a5f93e99322
-DIST urlgfe-0.98b.tar.gz 580344 RMD160 5437f0feb2489511b4b047a7dc6d479e0bc43e8c SHA1 067026b666bbff188f072306e4069cb6cec82a36 SHA256 e00e068ca63b4f6633dec5bdf917ce2fd92aaa2787d29afc6509f838b722adfd
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST urlgfe-1.0.1.tar.gz 676691 RMD160 64e76580312172bde5bb76e280add53be5a0430a SHA1 ae74ed407593b3b8dd26c97479404058b91ad279 SHA256 ec2ebbc9fd9b1827b5de17a520cc533fef3ad3b3f1a4535f4230edd744f0fdb7
 DIST urlgfe-1.0.tar.gz 554793 RMD160 ee6d9d852e205498decaedc8a355a720d52b735f SHA1 99d0bbbbb209489438d199686be4a27883dba4c5 SHA256 922fd0bdc1fc9a242fd297088c3bdbbd6b6f6a859e731392ddf6cf1d1cceec55
-EBUILD urlgfe-0.98a.ebuild 788 RMD160 ee5cd3315ba75c03c93a26fc3a6307f7f1889545 SHA1 b1f8c93d445faebaeb4bf60af43b5894f8e62572 SHA256 f3410e577f67cedebf7f1f819b49d5d3cc33fb224ad5333227aa7f6fdbf8e84d
-MD5 3a3c258b039d85c121e9b827c3ef3450 urlgfe-0.98a.ebuild 788
-RMD160 ee5cd3315ba75c03c93a26fc3a6307f7f1889545 urlgfe-0.98a.ebuild 788
-SHA256 f3410e577f67cedebf7f1f819b49d5d3cc33fb224ad5333227aa7f6fdbf8e84d urlgfe-0.98a.ebuild 788
-EBUILD urlgfe-0.98b.ebuild 794 RMD160 5ce95383875fc0bbd8ac8da91baa317e56c91086 SHA1 d03c931822797ccb2d2c35c010fccc6080449b5a SHA256 d0dfd4ff407e47c976883e68500526957a3d8c34173a652edcd672cf490d56d8
-MD5 51d82bed0c2712adc1cc10a2ca00577b urlgfe-0.98b.ebuild 794
-RMD160 5ce95383875fc0bbd8ac8da91baa317e56c91086 urlgfe-0.98b.ebuild 794
-SHA256 d0dfd4ff407e47c976883e68500526957a3d8c34173a652edcd672cf490d56d8 urlgfe-0.98b.ebuild 794
 EBUILD urlgfe-1.0.1.ebuild 816 RMD160 7cd71187bc901eb9b870ed07de4732c6d6078961 SHA1 b747d8917610ce0cfef575a129879d43b8b07ded SHA256 04faff9aac1233e6d795549e220655ac660d90ea61cc6d7b9bb8cd9eb0c4342a
 MD5 2656916fc23cb7b672170f4de9c072c7 urlgfe-1.0.1.ebuild 816
 RMD160 7cd71187bc901eb9b870ed07de4732c6d6078961 urlgfe-1.0.1.ebuild 816
@@ -18,23 +11,24 @@ EBUILD urlgfe-1.0.ebuild 809 RMD160 7dcef06c3e0466505232978e6db6ab603cfd8775 SHA
 MD5 47c132ea939ca3f610c6a4cc99c9b864 urlgfe-1.0.ebuild 809
 RMD160 7dcef06c3e0466505232978e6db6ab603cfd8775 urlgfe-1.0.ebuild 809
 SHA256 39c118b21f8c4f0eff9f1ba40c2a01d84c467bc577b9c593aa41a363510bcf10 urlgfe-1.0.ebuild 809
-MISC ChangeLog 2342 RMD160 f576d4215f8fef621ca3904e23076e5fb41ee5c6 SHA1 10c1ac4dc364deb19896ed6b2b29803ff1ace023 SHA256 6b76bcc1ad458dbb9b4202c49602aecd908760915ecb3d88a6c61b377dfe0a04
-MD5 5038863fec0db6dbf718213ecc1328e6 ChangeLog 2342
-RMD160 f576d4215f8fef621ca3904e23076e5fb41ee5c6 ChangeLog 2342
-SHA256 6b76bcc1ad458dbb9b4202c49602aecd908760915ecb3d88a6c61b377dfe0a04 ChangeLog 2342
+MISC ChangeLog 2452 RMD160 9d9acdac6a00655bf42670e971b873d037a856a6 SHA1 a793ac810e798196344b0b64514aa1455d09f29f SHA256 88f99d2c50a5c9c9c7c8aeeee81d12bdda0cd3d07f9028efc0c2868eed5b136d
+MD5 ca9faa88fcd736b57689614458ae522d ChangeLog 2452
+RMD160 9d9acdac6a00655bf42670e971b873d037a856a6 ChangeLog 2452
+SHA256 88f99d2c50a5c9c9c7c8aeeee81d12bdda0cd3d07f9028efc0c2868eed5b136d ChangeLog 2452
 MISC metadata.xml 533 RMD160 24c3956677a97103be91baca3ad43ec7e6a6a724 SHA1 3f03a271aad116e2cf367fd0ae1723b0259a8d3d SHA256 bbb5cbb41ecd378f20f0f6e6dda664b379a2df9485038039f3f99cdfa5396863
 MD5 02c76c4d6ee14a5634bba6f72032d3ce metadata.xml 533
 RMD160 24c3956677a97103be91baca3ad43ec7e6a6a724 metadata.xml 533
 SHA256 bbb5cbb41ecd378f20f0f6e6dda664b379a2df9485038039f3f99cdfa5396863 metadata.xml 533
-MD5 779a1798f61067529eacb2f75f1befc3 files/digest-urlgfe-0.98a 238
-RMD160 8c2f6bc09fd9afe5f8e930d5c9f8a2184ebc0c5b files/digest-urlgfe-0.98a 238
-SHA256 ab5b3825fba3202dfe75d31f3b0178dabeff4a07b275faf82a8adbf322ba967a files/digest-urlgfe-0.98a 238
-MD5 1a1ec72840f7b135cca3049b94ced661 files/digest-urlgfe-0.98b 238
-RMD160 cd3974cb4a85af3645e1d2f92d7822120a0c2b3e files/digest-urlgfe-0.98b 238
-SHA256 08a1eba722a3e110bf4a20784cb69f37f514bce2cff420c8f67bc1b571893c0c files/digest-urlgfe-0.98b 238
 MD5 a6388e68c1af536d2f580cb75fd75c18 files/digest-urlgfe-1.0 232
 RMD160 2d4a6ab12139094ff4d4828edf3c061abc078222 files/digest-urlgfe-1.0 232
 SHA256 77f066c09dd78a3a481376fecb48db9d3ccd84c358c5366d9fd56f87909fc982 files/digest-urlgfe-1.0 232
 MD5 1424d4f1469a90907feeb7534e1208eb files/digest-urlgfe-1.0.1 238
 RMD160 31da7d475f368502b80087be32b34c63698f5014 files/digest-urlgfe-1.0.1 238
 SHA256 ece565d9fa944ea60cd12022b16dc889ebd660bcce0821b8b745c984b843d65b files/digest-urlgfe-1.0.1 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFF8y5aI1lqEGTUzyQRAgHlAKC8lo7uT/ghiq2vOTFDjNooBmxScQCfSd+C
+FpXj8BRwOvFL67/Dcs84YoQ=
+=nPuf
+-----END PGP SIGNATURE-----
