@@ -1,3 +1,0 @@
-MD5 e29a3c56dbaa0bceb4750ed0bfef41e4 urlgfe-0.98a.tar.gz 573545
-RMD160 e4fd399e32784ef21e615731b51298d641b684af urlgfe-0.98a.tar.gz 573545
-SHA256 a80a1effb29b72a97e8e330eb67652db9bd9c55b9f9f1c51e7666a5f93e99322 urlgfe-0.98a.tar.gz 573545
