@@ -1,3 +1,0 @@
-MD5 7bc81bf59ccb2dc7877e0d75d3aaf276 urlgfe-0.98b.tar.gz 580344
-RMD160 5437f0feb2489511b4b047a7dc6d479e0bc43e8c urlgfe-0.98b.tar.gz 580344
-SHA256 e00e068ca63b4f6633dec5bdf917ce2fd92aaa2787d29afc6509f838b722adfd urlgfe-0.98b.tar.gz 580344
